--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <button id="reset-btn">Reset Votes</button>
       </div>
 
-      <!-- Bonus only! Uncomment the elements below when you are ready to work on the bonus deliverables --> -->
+      <!-- Bonus only! Uncomment the elements below when you are ready to work on the bonus deliverables -->
       <!--   -->
-        <h4>Add New Character</h4>
+        <!-- <h4>Add New Character</h4> -->
         <form id="character-form">
           <div>
             <label for="name">Name</label>
@@ -48,4 +48,4 @@
     </div>
     <script src="src/index.js"></script>
   </body>
-</html>
+</html> -->
