--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- Bonus only! Uncomment the elements below when you are ready to work on the bonus deliverables -->
       <!--   -->
         <!-- <h4>Add New Character</h4> -->
-        <form id="character-form">
+        <!-- <form id="character-form">
           <div>
             <label for="name">Name</label>
             <input type="text" id="name" name="name" />
@@ -48,4 +48,5 @@
     </div>
     <script src="src/index.js"></script>
   </body>
-</html> -->
+</html> `
+
